fix(description): make description wrap properly
closes LERGO-597

--- a/app/styles/_lessonIntro.scss
+++ b/app/styles/_lessonIntro.scss
@@ -201,6 +201,7 @@
             .description {
                 pre {
                     word-break: break-word;
+                    white-space: pre-wrap;
                     background: transparent;
                 }
                 font-size: 17px;
